# geno-surf

./: .gitignore  GENO.md  README.md  SKILL.md  genotools.yaml  layer.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
geno_surf/: __init__.py  chrome_cdp.py  cli.py  registry.py
geno_surf/extension/: manifest.json  sw.js
skills/groups/group/: SKILL.md
skills/open/open/: SKILL.md
skills/tabs/ls/: SKILL.md
